fix word wrap

--- a/sass/components/_popover.scss
+++ b/sass/components/_popover.scss
@@ -52,7 +52,7 @@
             padding: 1px 3px;
 
             p {
-                white-space: nowrap;
+                white-space: normal;
                 word-break: normal;
 
                 &:last-child {
